remove tracer
